# src/routes/user/index.ts
@@ -2,6 +2,7 @@ import { Router } from 'express';
 import {
     userSignUpController,
     userSignUpAuthenticationNumberController,
+    userSignInController,
   } from './controller';
 
 const user = Router();
@@ -12,5 +13,8 @@ user
 user
   .route('/signup/auth')
   .post(userSignUpAuthenticationNumberController);
+  user
+  .route('/signin')
+  .post(userSignInController);
 
 export default user;
