# src/routes/user/swagger.yml
@@ -32,6 +32,19 @@ definitions:
       phone:
         type: string
         description: 전화번호
+  
+  SignIn:
+    type: object
+    required:
+      - phone
+      - password
+    properties:
+      phone:
+        type: string
+        description: 전화번호
+      password:
+        type: string
+        description: 비밀번호
 
 /user/signup:
   post:
@@ -124,6 +137,58 @@ definitions:
                 status: 400
                 message: '핸드폰의 형식에 맞게 입력해주세요.'
                 code: 'SIGNUP004'
+      500:
+        description: "알 수 없는 오류"
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 500
+                message: Internal Server Error
+                code: COMMON005
+
+/user/signin:
+  post:
+    tags: [User]
+    produces:
+      - application/json
+    consumes:
+      - application/json
+    requestBody:
+      content:
+        application/json:
+          name: SignIn
+          required: true
+          schema: 
+            $ref: '#/definitions/SignIn'
+    responses:
+      200:
+        description: '로그인 완료'
+        content:
+          application/json:
+            example:
+              data:
+                accessToken: "testtoken1234"
+              status: 200
+              message: '정상적으로 로그인 되었습니다.'
+      400:
+        description: '잘못된 데이터를 입력한 경우'
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 400
+                message: '전화번호나 비밀번호가 일치하지 않습니다.'
+                code: 'SIGNIN001'
+      403:
+        description: '토큰 발행 문제'
+        content:
+          application/json:
+            example:
+              errorCode:
+                status: 403
+                message: '토큰이 발급되지 않았습니다.'
+                code: 'SIGNIN002'
       500:
         description: "알 수 없는 오류"
         content:
